backend/microk8_deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amigo-ams-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amigo-ams-app
  template:
    metadata:
      labels:
        app: amigo-ams-app
    spec:
      containers:
      - name: amigo-ams-app
        image: localhost:32000/amigo-ams-app:v1.0
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1.0"
          requests:
            memory: "256Mi"
            cpu: "0.25"
        volumeMounts:
        - name: media-volume
          mountPath: /backend/media
      volumes:
      - name: media-volume
        hostPath:
          path: /mnt/media-data/ST000075_ASSET_MANAGEMENT_DEVELOP
