backend/microk8_deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amigo-ams-app-app-service
spec:
  selector:
    app: amigo-ams-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
